Edit view employee profile page

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -54,9 +54,9 @@
                                 <h6 class="text-md font-bold text-gray-800">Contact Information</h6>
                             </div>
                             <div class="mb-4">
-                                <label asp-for="Barangay.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Phone No.</label>
-                                <input type="tel" asp-for="Barangay.ContactNo" placeholder="eg. Ninoy Aquino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" required />
-                                <span asp-validation-for="Barangay.ContactNo" class="block mb-2 text-sm text-red-700"></span>
+                                <label asp-for="Barangay.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Contact No.</label>
+                                <input type="tel" asp-for="Barangay.ContactNo" placeholder="eg. Ninoy Aquino" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" required />
+                                <span asp-validation-for="Barangay.ContactNo" lass="block mb-2 text-sm text-red-700"></span>
                             </div>
                             <div class="mb-2">
                                 <h6 class="text-md font-bold text-gray-800">Others</h6>
