--- a/AUF.EMR.MVC/Views/User/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/User/Edit.cshtml
@@ -41,7 +41,7 @@
                         <span asp-validation-for="User.Birthday" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="User.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Contact No</label>
+                        <label asp-for="User.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Contact No.</label>
                         <input asp-for="User.ContactNo" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" autocomplete="contactno" aria-required="true" placeholder="Contact No" />
                         <span asp-validation-for="User.ContactNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
