Admin page design completed

--- a/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
+++ b/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
@@ -30,8 +30,8 @@
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="FullName" />
             <div class="flex justify-end">
-                <a asp-action="Edit" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
-                <button type="submit" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Reset Password</button>
+                <a asp-action="Edit" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Reset Password</button>
             </div>
             </form>
     </div>
