--- a/AUF.EMR.MVC/Views/Barangay/Index.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Index.cshtml
@@ -82,8 +82,7 @@
             </dl>
 
             <div class="flex justify-end mt-8">
-                <a asp-action="Edit" asp-route-id="@Model?.Id" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
-                <!--<a asp-action="index" class="inline-block bg-gray-300 hover:bg-gray-400 text-gray-700 font-semibold py-2 px-4 rounded">back to list</a>-->  <!-- I don't think need pa nito kasi may side nav naman -->
+                <a asp-action="Edit" asp-route-id="@Model?.Id" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
             </div>
         </div>
 
