--- a/AUF.EMR.MVC/Views/User/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/User/Edit.cshtml
@@ -64,8 +64,8 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
-                <button id="registerSubmit" type="submit" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Update Employee</button>
+                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
+                <button id="registerSubmit" type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Update Employee</button>
             </div>
         </form>
         
