--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -27,7 +27,7 @@
         <h1 class="text-2xl font-bold mb-8">List of Employees</h1>
         <div class="flex justify-between items-center mb-8">
             <div class="flex-1 mr-4 relative">
-                <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200"
+                <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
                        placeholder="Search...">
                 <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
                     <svg class="h-5 w-5 text-gray-400" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
@@ -70,13 +70,13 @@
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.ContactNo)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Address)</td>
                             <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-700 mr-2">
+                                <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2">
                                     <i class="fas fa-edit"></i>
                                 </a>
-                                <a asp-action="Profile" asp-route-id="@item.Id" class="text-green-400 hover:text-green-700 mr-2">
+                                <a asp-action="Profile" asp-route-id="@item.Id" class="text-green-400 hover:text-green-500 mr-2">
                                     <i class="fas fa-eye"></i>
                                 </a>
-                                <a asp-action="Delete" asp-route-id="@item.Id" class="text-red-300 hover:text-red-700">
+                                <a asp-action="Delete" asp-route-id="@item.Id" class="text-red-300 hover:text-red-400">
                                     <i class="fas fa-trash-alt"></i>
                                 </a>
                             </td>
@@ -84,11 +84,7 @@
                     }
                 </tbody>
             </table>
-
         </div>
-
     </div>
-
 </body>
-
 </html>
