--- a/AUF.EMR.MVC/Views/User/Profile.cshtml
+++ b/AUF.EMR.MVC/Views/User/Profile.cshtml
@@ -93,8 +93,8 @@
             </dl>
 
             <div class="flex justify-end mt-8">
-                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
-                <a asp-action="Edit" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
+                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
+                <a asp-action="Edit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
             </div>
         </div>
     </div>
