--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -41,7 +41,7 @@
                         <span asp-validation-for="Household.LastName" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="Household.ContactNo" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone number</label>
+                        <label asp-for="Household.ContactNo" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact No.</label>
                         <input type="tel" asp-for="Household.ContactNo" class=" bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" placeholder="0912-345-6789" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required />
                         <span asp-validation-for="Household.ContactNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
@@ -151,7 +151,7 @@
                                 <input asp-for="Household.IsIP" value="false" type="radio" class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500">
                                 <label asp-for="Household.IsIP" class="ms-2 text-sm font-medium text-gray-900">Non IP</label>
                             </div>
-                        </div>
+                            </div>
                         <span asp-validation-for="Household.IsIP" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
@@ -183,8 +183,8 @@
                 </div>
             </div>
             <div class="flex justify-end">
-                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Cancel</a>
-                <button type="submit" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Register</button>
+                <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Cancel</a>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Register</button>
             </div>
         </form>
     </div>
