Edit household member add page

--- a/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Create.cshtml
@@ -23,7 +23,7 @@
                         <span asp-validation-for="Household.HouseholdNo" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
-                        <h6 class="text-md font-bold text-gray-800">Respondent personal info</h6>
+                        <h6 class="text-md font-bold text-gray-800">Respondent Personal Information</h6>
                     </div>
                     <div class="mb-4">
                         <label asp-for="Household.FirstName" class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
@@ -155,7 +155,7 @@
                         <span asp-validation-for="Household.IsIP" class="block mb-2 text-sm text-red-700"></span>
                     </div>
                     <div class="mb-2 mt-8">
-                        <h6 class="text-md font-bold text-gray-800">Household head Philhealth member</h6>
+                        <h6 class="text-md font-bold text-gray-800">Household Head Philhealth Member</h6>
                     </div>
                     <div class="mb-4">
                         <div class="flex mb-4">
