--- a/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHold/Edit.cshtml
@@ -19,7 +19,7 @@
                             <span asp-validation-for="Household.HouseholdNo" class="block mb-2 text-sm text-red-700"></span>
                         </div>
                         <div class="mb-2 mt-8">
-                            <h6 class="text-md font-bold text-gray-800">Respondent personal info</h6>
+                            <h6 class="text-md font-bold text-gray-800">Respondent Personal Information</h6>
                         </div>
                         <div class="mb-4">
                             <label asp-for="Household.FirstName" class="block mb-2 text-sm font-medium text-gray-700">First Name</label>
@@ -40,6 +40,9 @@
                             <label asp-for="Household.ContactNo" class="block mb-2 text-sm font-medium text-gray-700">Contact Number</label>
                         <input asp-for="Household.ContactNo" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-2/4 p-2.5" />
                             <span asp-validation-for="Household.ContactNo" class="block mb-2 text-sm text-red-700"></span>
+                        </div>
+                        <div class="mb-2 mt-8">
+                            <h6 class="text-md font-bold text-gray-800">Home Address</h6>
                         </div>
                         <div class="mb-4">
                             <label asp-for="Household.HouseNoAndStreet" class="block mb-2 text-sm font-medium text-gray-700">House No. & Street</label>
@@ -64,6 +67,9 @@
                     </div>
                     <!-- Right Column-->
                     <div>
+                        <div class="mb-2">
+                            <h6 class="text-md font-bold text-gray-800">Quarterly Visit</h6>
+                        </div>
                          <div class="mb-4">
                             <label asp-for="Household.FirstQtrVisit" class="block mb-2 text-sm font-medium text-gray-700"></label>
                             <input asp-for="Household.FirstQtrVisit" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
@@ -84,6 +90,9 @@
                             <input asp-for="Household.FourthQtrVisit" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                             <span asp-validation-for="Household.FourthQtrVisit" class="block mb-2 text-sm text-red-700"></span>
                         </div>
+                        <div class="mb-2 mt-8">
+                            <h6 class="text-md font-bold text-gray-800">NHTS Household</h6>
+                        </div>
                         <div class="mb-4">
                             <label class="block mb-2 text-sm font-medium text-gray-700"></label>
                             <div class="flex items-center me-4">
@@ -95,10 +104,16 @@
                                 <label class="ms-2 text-sm font-medium text-gray-900">Non NHTS</label>
                             </div>
                         </div>
+                        <div class="mb-2 mt-8">
+                            <h6 class="text-md font-bold text-gray-800">IP Household</h6>
+                        </div>
                         <div class="mb-4">
                             <label class="flex items-center me-4">
                                     <input class="w-4 h-4 text-blue-600 bg-gray-50 border-gray-300 focus:ring-blue-500" asp-for="Household.IsIP" /> @Html.DisplayNameFor(model => model.Household.IsIP)
                             </label>
+                        </div>
+                        <div class="mb-2 mt-8">
+                            <h6 class="text-md font-bold text-gray-800">Household Head Philhealth Member</h6>
                         </div>
                         <div class="mb-4"
                             <label class="flex items-center me-4">
