--- a/AUF.EMR.MVC/Views/Masterlist/EditAdultInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditAdultInfo.cshtml
@@ -14,7 +14,7 @@
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
             <input type="hidden" asp-for="HouseholdMember.Id" value="@Model.HouseholdMember.Id" />
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
-            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Household Member</h1>
+            <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Adult Information</h1>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                 <div>
