Edit oral health information edit page

--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -1,6 +1,8 @@
 ﻿@model EditHouseholdMemberVM
 
 @{
+    Layout = "Layouts/_HouseholdLayout";
+    Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "EditChildrenInfo";
 }
 
